--- a/src/moodle/tsconfig.json
+++ b/src/moodle/tsconfig.json
@@ -4,93 +4,93 @@
 		"lib": ["es2023", "dom", "dom.Iterable"],
 
 		"paths": {
-			"core/*": ["moodle/lib/amd/src/*"],
-			"core_admin/*": ["moodle/admin/amd/src/*"],
-			"core_ai/*": ["moodle/ai/amd/src/*"],
-			"core_availability/*": ["moodle/availability/amd/src/*"],
-			"core_backup/*": ["moodle/backup/util/ui/amd/src/*"],
-			"core_badges/*": ["moodle/badges/amd/src/*"],
-			"core_block/*": ["moodle/blocks/amd/src/*"],
-			"block_accessreview/*": ["moodle/blocks/accessreview/amd/src/*"],
-			"block_myoverview/*": ["moodle/blocks/myoverview/amd/src/*"],
-			"block_navigation/*": ["moodle/blocks/navigation/amd/src/*"],
-			"block_online_users/*": ["moodle/blocks/online_users/amd/src/*"],
-			"block_private_files/*": ["moodle/blocks/private_files/amd/src/*"],
-			"block_recentlyaccessedcourses/*": ["moodle/blocks/recentlyaccessedcourses/amd/src/*"],
-			"block_recentlyaccesseditems/*": ["moodle/blocks/recentlyaccesseditems/amd/src/*"],
-			"block_settings/*": ["moodle/blocks/settings/amd/src/*"],
-			"block_site_main_menu/*": ["moodle/blocks/site_main_menu/amd/src/*"],
-			"block_starredcourses/*": ["moodle/blocks/starredcoursses/amd/src/*"],
-			"block_timeline/*": ["moodle/blocks/timeline/amd/src/*"],
-			"core_calendar/*": ["moodle/calendar/amd/src/*"],
-			"core_cohort/*": ["moodle/cohort/amd/src/*"],
-			"core_comment/*": ["moodle/comment/amd/src/*"],
-			"core_communication/*": ["moodle/communication/amd/src/*"],
-			"core_contentbank/*": ["moodle/contentbank/amd/src/*"],
-			"core_course/*": ["moodle/course/amd/src/*"],
-			"core_customfield/*": ["moodle/customfield/amd/src/*"],
-			"customfield_number/*": ["moodle/customfield/field/number/amd/src/*"],
-			"enrol_guest/*": ["moodle/enrol/guest/amd/src/*"],
-			"enrol_lti/*": ["moodle/enrol/lti/amd/src/*"],
-			"enrol_manual/*": ["moodle/enrol/manual/amd/src/*"],
-			"enrol_self/*": ["moodle/enrol/self/amd/src/*"],
-			"core_filters/*": ["moodle/filter/amd/src/*"],
-			"filter/codehighlighter": ["moodle/filter/codehighlighter/amd/src/prism-init.js"],
-			"filter_glossary/*": ["moodle/filter/glossary/amd/src/*"],
-			"filter_mathjaxloader/*": ["moodle/filter/mathjaxloader/amd/src/*"],
-			"core_grades": ["moodle/grade/amd/src/gradebooksetup_forms.js"],
-			"core_grades/*": ["moodle/grade/amd/src/*"],
-			"gradingform_guide/*": ["moodle/grade/grading/form/guide/amd/src/*"],
-			"gradingform_rubric/*": ["moodle/grade/grading/form/rubric/amd/src/*"],
-			"gradepenalty_duedate/*": ["moodle/grade/penalty/duedate/amd/src/*"],
-			"gradereport_grader/*": ["moodle/grade/report/grader/amd/src/*"],
-			"gradereport_singleview/*": ["moodle/grade/report/singleview/amd/src/*"],
-			"gradereport_user/*": ["moodle/grade/report/user/amd/src/*"],
-			"core_group/*": ["moodle/group/amd/src/*"],
-			"core_h5p/*": ["moodle/h5p/amd/src/*"],
-			"media_videojs/*": ["moodle/media/player/videojs/amd/src/*"],
-			"core_message/*": ["moodle/message/amd/src/*"],
-			"mod_assign/*": ["moodle/mod/assign/amd/src/*"],
-			"mod_bigbluebuttonbn/*": ["moodle/mod/bigbluebuttonbn/amd/src/*"],
-			"mod_data/*": ["moodle/mod/data/amd/src/*"],
-			"mod_feedback/*": ["moodle/mod/feedback/amd/src/*"],
-			"mod_folder/*": ["moodle/mod/folder/amd/src/*"],
-			"mod_forum/*": ["moodle/mod/forum/amd/src/*"],
-			"forumreport_summary/*": ["moodle/mod/forum/report/summary/amd/src/*"],
-			"mod_lti/*": ["moodle/mod/lti/amd/src/*"],
-			"mod_quiz/*": ["moodle/mod/quiz/amd/src/*"],
-			"quizaccess_seb/*": ["moodle/mod/quiz/accessrule/seb/amd/src/*"],
-			"quiz_overview/*": ["moodle/mod/quiz/report/overview/amd/src/*"],
-			"mod_workshop/*": ["moodle/mod/workshop/amd/src/*"],
-			"core_payment/*": ["moodle/payment/amd/src/*"],
-			"paygw_paypal/*": ["moodle/payment/gateway/paypal/amd/src/*"],
-			"core_question/*": ["moodle/question/amd/src/*"],
-			"qbank_bulkmove/*": ["moodle/question/bank/bulkmove/amd/src/*"],
-			"qbank_columnsortorder/*": ["moodle/question/bank/columnsortorder/amd/src/*"],
-			"qbank_comment/*": ["moodle/question/bank/comment/amd/src/*"],
-			"qbank_deletequestion/*": ["moodle/question/bank/deletequestion/amd/src/*"],
-			"qbank_editquestion/*": ["moodle/question/bank/editquestion/amd/src/*"],
-			"qbank_managecategories/*": ["moodle/question/bank/managecategories/amd/src/*"],
-			"qbank_previewquestion/*": ["moodle/question/bank/previewquestion/amd/src/*"],
-			"qbank_tagquestion/*": ["moodle/question/bank/tagquestion/amd/src/*"],
-			"qbank_usage/*": ["moodle/question/bank/usage/amd/src/*"],
-			"qbank_viewquestiontext/*": ["moodle/question/bank/viewquestiontext/amd/src/*"],
-			"qbank_viewquestiontype/*": ["moodle/question/bank/viewquestiontype/amd/src/*"],
-			"qtype_ddimageortext/*": ["moodle/question/type/ddimageortext/amd/src/*"],
-			"qtype_ddmarker/*": ["moodle/question/type/ddmarker/amd/src/*"],
-			"qtype_ddwtos/*": ["moodle/question/type/ddwtos/amd/src/*"],
-			"qtype_multianswer/*": ["moodle/question/type/multianswer/amd/src/*"],
-			"qtype_multichoice/*": ["moodle/question/type/multichoice/amd/src/*"],
+			"core/*": ["moodle/public/lib/amd/src/*"],
+			"core_admin/*": ["moodle/public/admin/amd/src/*"],
+			"core_ai/*": ["moodle/public/ai/amd/src/*"],
+			"core_availability/*": ["moodle/public/availability/amd/src/*"],
+			"core_backup/*": ["moodle/public/backup/util/ui/amd/src/*"],
+			"core_badges/*": ["moodle/public/badges/amd/src/*"],
+			"core_block/*": ["moodle/public/blocks/amd/src/*"],
+			"block_accessreview/*": ["moodle/public/blocks/accessreview/amd/src/*"],
+			"block_myoverview/*": ["moodle/public/blocks/myoverview/amd/src/*"],
+			"block_navigation/*": ["moodle/public/blocks/navigation/amd/src/*"],
+			"block_online_users/*": ["moodle/public/blocks/online_users/amd/src/*"],
+			"block_private_files/*": ["moodle/public/blocks/private_files/amd/src/*"],
+			"block_recentlyaccessedcourses/*": ["moodle/public/blocks/recentlyaccessedcourses/amd/src/*"],
+			"block_recentlyaccesseditems/*": ["moodle/public/blocks/recentlyaccesseditems/amd/src/*"],
+			"block_settings/*": ["moodle/public/blocks/settings/amd/src/*"],
+			"block_site_main_menu/*": ["moodle/public/blocks/site_main_menu/amd/src/*"],
+			"block_starredcourses/*": ["moodle/public/blocks/starredcoursses/amd/src/*"],
+			"block_timeline/*": ["moodle/public/blocks/timeline/amd/src/*"],
+			"core_calendar/*": ["moodle/public/calendar/amd/src/*"],
+			"core_cohort/*": ["moodle/public/cohort/amd/src/*"],
+			"core_comment/*": ["moodle/public/comment/amd/src/*"],
+			"core_communication/*": ["moodle/public/communication/amd/src/*"],
+			"core_contentbank/*": ["moodle/public/contentbank/amd/src/*"],
+			"core_course/*": ["moodle/public/course/amd/src/*"],
+			"core_customfield/*": ["moodle/public/customfield/amd/src/*"],
+			"customfield_number/*": ["moodle/public/customfield/field/number/amd/src/*"],
+			"enrol_guest/*": ["moodle/public/enrol/guest/amd/src/*"],
+			"enrol_lti/*": ["moodle/public/enrol/lti/amd/src/*"],
+			"enrol_manual/*": ["moodle/public/enrol/manual/amd/src/*"],
+			"enrol_self/*": ["moodle/public/enrol/self/amd/src/*"],
+			"core_filters/*": ["moodle/public/filter/amd/src/*"],
+			"filter/codehighlighter": ["moodle/public/filter/codehighlighter/amd/src/prism-init.js"],
+			"filter_glossary/*": ["moodle/public/filter/glossary/amd/src/*"],
+			"filter_mathjaxloader/*": ["moodle/public/filter/mathjaxloader/amd/src/*"],
+			"core_grades": ["moodle/public/grade/amd/src/gradebooksetup_forms.js"],
+			"core_grades/*": ["moodle/public/grade/amd/src/*"],
+			"gradingform_guide/*": ["moodle/public/grade/grading/form/guide/amd/src/*"],
+			"gradingform_rubric/*": ["moodle/public/grade/grading/form/rubric/amd/src/*"],
+			"gradepenalty_duedate/*": ["moodle/public/grade/penalty/duedate/amd/src/*"],
+			"gradereport_grader/*": ["moodle/public/grade/report/grader/amd/src/*"],
+			"gradereport_singleview/*": ["moodle/public/grade/report/singleview/amd/src/*"],
+			"gradereport_user/*": ["moodle/public/grade/report/user/amd/src/*"],
+			"core_group/*": ["moodle/public/group/amd/src/*"],
+			"core_h5p/*": ["moodle/public/h5p/amd/src/*"],
+			"media_videojs/*": ["moodle/public/media/player/videojs/amd/src/*"],
+			"core_message/*": ["moodle/public/message/amd/src/*"],
+			"mod_assign/*": ["moodle/public/mod/assign/amd/src/*"],
+			"mod_bigbluebuttonbn/*": ["moodle/public/mod/bigbluebuttonbn/amd/src/*"],
+			"mod_data/*": ["moodle/public/mod/data/amd/src/*"],
+			"mod_feedback/*": ["moodle/public/mod/feedback/amd/src/*"],
+			"mod_folder/*": ["moodle/public/mod/folder/amd/src/*"],
+			"mod_forum/*": ["moodle/public/mod/forum/amd/src/*"],
+			"forumreport_summary/*": ["moodle/public/mod/forum/report/summary/amd/src/*"],
+			"mod_lti/*": ["moodle/public/mod/lti/amd/src/*"],
+			"mod_quiz/*": ["moodle/public/mod/quiz/amd/src/*"],
+			"quizaccess_seb/*": ["moodle/public/mod/quiz/accessrule/seb/amd/src/*"],
+			"quiz_overview/*": ["moodle/public/mod/quiz/report/overview/amd/src/*"],
+			"mod_workshop/*": ["moodle/public/mod/workshop/amd/src/*"],
+			"core_payment/*": ["moodle/public/payment/amd/src/*"],
+			"paygw_paypal/*": ["moodle/public/payment/gateway/paypal/amd/src/*"],
+			"core_question/*": ["moodle/public/question/amd/src/*"],
+			"qbank_bulkmove/*": ["moodle/public/question/bank/bulkmove/amd/src/*"],
+			"qbank_columnsortorder/*": ["moodle/public/question/bank/columnsortorder/amd/src/*"],
+			"qbank_comment/*": ["moodle/public/question/bank/comment/amd/src/*"],
+			"qbank_deletequestion/*": ["moodle/public/question/bank/deletequestion/amd/src/*"],
+			"qbank_editquestion/*": ["moodle/public/question/bank/editquestion/amd/src/*"],
+			"qbank_managecategories/*": ["moodle/public/question/bank/managecategories/amd/src/*"],
+			"qbank_previewquestion/*": ["moodle/public/question/bank/previewquestion/amd/src/*"],
+			"qbank_tagquestion/*": ["moodle/public/question/bank/tagquestion/amd/src/*"],
+			"qbank_usage/*": ["moodle/public/question/bank/usage/amd/src/*"],
+			"qbank_viewquestiontext/*": ["moodle/public/question/bank/viewquestiontext/amd/src/*"],
+			"qbank_viewquestiontype/*": ["moodle/public/question/bank/viewquestiontype/amd/src/*"],
+			"qtype_ddimageortext/*": ["moodle/public/question/type/ddimageortext/amd/src/*"],
+			"qtype_ddmarker/*": ["moodle/public/question/type/ddmarker/amd/src/*"],
+			"qtype_ddwtos/*": ["moodle/public/question/type/ddwtos/amd/src/*"],
+			"qtype_multianswer/*": ["moodle/public/question/type/multianswer/amd/src/*"],
+			"qtype_multichoice/*": ["moodle/public/question/type/multichoice/amd/src/*"],
 			"qtype_stack/*": ["moodle-qtype_stack/amd/src/*"],
-			"report_competency/*": ["moodle/report/competency/amd/src/*"],
-			"report_insights/*": ["moodle/report/insights/amd/src/*"],
-			"report_participation/*": ["moodle/report/participation/amd/src/*"],
-			"report_progress/*": ["moodle/report/progress/amd/src/*"],
-			"core_reportbuilder/*": ["moodle/reportbuilder/amd/src/*"],
-			"core_search/*": ["moodle/search/amd/src/*"],
-			"core_sms/*": ["moodle/sms/amd/src/*"],
-			"theme_boost/*": ["moodle/theme/boost/amd/src/*"],
-			"core_user/*": ["moodle/user/amd/src/*"],
+			"report_competency/*": ["moodle/public/report/competency/amd/src/*"],
+			"report_insights/*": ["moodle/public/report/insights/amd/src/*"],
+			"report_participation/*": ["moodle/public/report/participation/amd/src/*"],
+			"report_progress/*": ["moodle/public/report/progress/amd/src/*"],
+			"core_reportbuilder/*": ["moodle/public/reportbuilder/amd/src/*"],
+			"core_search/*": ["moodle/public/search/amd/src/*"],
+			"core_sms/*": ["moodle/public/sms/amd/src/*"],
+			"theme_boost/*": ["moodle/public/theme/boost/amd/src/*"],
+			"core_user/*": ["moodle/public/user/amd/src/*"],
 		}
 	},
 	"include": ["./**/*", "../*.ts"]
