--- a/src/static/manifest.json
+++ b/src/static/manifest.json
@@ -5,16 +5,10 @@
 	"version": "0.1",
 	"description": "University of Canterbury AKO|Learn feature upgrades",
 	"permissions": [
-		"management",
-		"tabs",
 		"storage",
 		"scripting",
-		"declarativeNetRequestWithHostAccess",
-		"background"
+		"declarativeNetRequestWithHostAccess"
 	],
-	"background": {
-		"service_worker": "./dev-watcher-client.js"
-	},
 	"host_permissions": [
 		"*://learn.canterbury.ac.nz/*",
 		"*://preuc.canterbury.ac.nz/*",
@@ -25,38 +19,14 @@
 	"web_accessible_resources": [
 		{
 			"resources": [
-				"learn/help.md",
-				"learn/assets/*",
-				"learn/hydration-worker.js",
-				"learn/pyright/*.js",
-				"learn/mathlive/*",
-				"learn/vs/*",
-				"excalidraw/*",
-				"learn/python-typeshed.zip",
-				"learn/default-user.css",
-				"learn/ace-code-shadow.css",
-				"learn/videojs-shadow.css",
-				"learn/index.js",
-				"learn/index.css"
+				"moodle.js",
+				"mathlive/*"
 			],
 			"matches": [
 				"*://learn.canterbury.ac.nz/*",
 				"*://preuc.canterbury.ac.nz/*",
 				"*://*.csse.canterbury.ac.nz/*"
 			]
-		},
-		{
-			"resources": ["learn/inspector.css", "learn/highlight.js/*.css"],
-			"matches": [
-				"*://learn.canterbury.ac.nz/*",
-				"*://preuc.canterbury.ac.nz/*",
-				"*://*.csse.canterbury.ac.nz/*"
-			],
-			"match_about_blank": true
-		},
-		{
-			"resources": ["timetable/index.css"],
-			"matches": ["*://timetable.canterbury.ac.nz/*"]
 		}
 	],
 	"icons": {
@@ -72,18 +42,8 @@
 				"*://preuc.canterbury.ac.nz/*",
 				"*://*.csse.canterbury.ac.nz/*"
 			],
-			"js": ["learn/bootload.js", "learn/dev-watcher-content-script.js"],
-			"run_at": "document_start"
-		},
-		{
-			"matches": ["*://timetable.canterbury.ac.nz/*"],
-			"js": ["timetable/index.js"],
-			"world": "MAIN",
-			"run_at": "document_start"
-		},
-		{
-			"matches": ["*://timetable.canterbury.ac.nz/*"],
-			"js": ["timetable/dev-watcher-content-script.js"],
+			"css": ["config/user.build.css"],
+			"js": ["moodle_bootload.js"],
 			"run_at": "document_start"
 		}
 	],
