fix mathjax, only load mathlive when needed

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 node_modules/
-src/static/build/
+src/static/mathlive
 src/static/config/user.build.css
+src/static/*.js
+src/static/*.map
 config/
 bun.lock
 dist/
+build
