--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
 	"name": "moomo",
 	"type": "module",
 	"scripts": {
-		"dev": "export IS_PREACT=1 && bun clean:build && mkdir dist/ && bun build:css && bun bundle:dev && rspack --env dev -o dist/",
+		"dev": "export IS_PREACT=1 && bun clean:dev && (bun build:css:dev &) && bun bundle:dev && rspack --env dev -w -o build/",
 		"build": "export IS_PREACT=1 && bun clean:build && mkdir dist/ && bun build:css && bun bundle && rspack -o dist/",
 		"bundle": "cp -R src/static/* dist && rm dist/manifest.json && mv dist/manifest.production.json dist/manifest.json && mkdir dist/mathlive && cp -R node_modules/mathlive/fonts dist/mathlive",
-		"bundle:dev": "cp -R src/static/* dist && rm dist/manifest.production.json && mkdir dist/mathlive && cp -R node_modules/mathlive/fonts dist/mathlive",
+		"bundle:dev": "ln -s src/static/ build && mkdir build/mathlive && cp -R node_modules/mathlive/fonts build/mathlive",
 		"build:css": "bun run src/css/cli.ts src/static/config/user.css",
+		"build:css:dev": "bun run --watch src/css/cli.ts src/static/config/user.css",
 		"clean:build": "rm -rf dist/",
+		"clean:dev": "(rm build || true) && rm -rf src/static/mathlive src/static/*.js src/static/*.map",
 		"postinstall": "patch -sf node_modules/moodle-qtype_stack/amd/src/input.js patches/moodle-qtype_stack@5141eb0.patch || true"
 	},
 	"devDependencies": {
