--- a/src/moodle/tsconfig.json
+++ b/src/moodle/tsconfig.json
@@ -93,5 +93,5 @@
 			"core_user/*": ["moodle/public/user/amd/src/*"],
 		}
 	},
-	"include": ["./**/*", "../*.ts"]
+	"include": ["./**/*", "../*.ts", "./node_modules/@types/requirejs", "./node_modules/moodle-qtype_stack/*"]
 }
