--- a/tsconfig.json
+++ b/tsconfig.json
@@ -37,5 +37,5 @@
 			"react-dom/*": ["./node_modules/preact/compat/*"],
 		}
 	},
-	"include": ["./node_modules/@types/requirejs", "./node_modules/moodle-qtype_stack/*", "src/*"]
+	"include": ["src/*"]
 }
