--- a/src/static/manifest.json
+++ b/src/static/manifest.json
@@ -1,9 +1,9 @@
 {
 	"$schema": "https://json.schemastore.org/chrome-manifest",
 	"manifest_version": 3,
-	"name": "uclearn",
+	"name": "moomo",
 	"version": "0.1",
-	"description": "University of Canterbury AKO|Learn feature upgrades",
+	"description": "Moodle feature upgrades",
 	"permissions": [
 		"storage",
 		"scripting",
